--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.3.0",
+    "gatsby-plugin-layout": "^1.3.0",
     "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
