--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^1.19.1"
   },
   "keywords": [
