--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "manawire",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Manawire website theme",
+  "version": "0.2.0",
+  "author": "@gooden",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.21.7",
-    "gatsby-image": "^2.4.0",
-    "gatsby-plugin-facebook-pixel": "^1.0.3",
-    "gatsby-plugin-google-analytics": "^2.3.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-layout": "^1.3.0",
-    "gatsby-plugin-manifest": "^2.4.1",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.3.0",
-    "gatsby-plugin-scroll-indicator": "^0.1.4",
-    "gatsby-plugin-sharp": "^2.6.0",
-    "gatsby-plugin-styled-components": "^3.3.0",
-    "gatsby-remark-images": "^3.3.0",
-    "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-remark": "^2.8.3",
-    "gatsby-transformer-sharp": "^2.5.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.1"
+    "babel-plugin-styled-components": "^2.0.7",
+    "gatsby": "^5.4.0",
+    "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-google-analytics": "^5.4.0",
+    "gatsby-plugin-image": "^3.4.0",
+    "gatsby-plugin-layout": "^4.4.0",
+    "gatsby-plugin-manifest": "^5.4.0",
+    "gatsby-plugin-offline": "^6.4.0",
+    "gatsby-plugin-react-helmet": "^6.4.0",
+    "gatsby-plugin-scroll-indicator": "^1.0.1",
+    "gatsby-plugin-sharp": "^5.4.0",
+    "gatsby-plugin-styled-components": "^6.4.0",
+    "gatsby-remark-images": "^7.4.0",
+    "gatsby-source-filesystem": "^5.4.0",
+    "gatsby-transformer-remark": "^6.4.0",
+    "gatsby-transformer-sharp": "^5.4.0",
+    "path": "^0.12.7",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^1.19.1"
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.2"
   },
   "keywords": [
     "gatsby"
@@ -49,9 +49,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/good3n/manawire"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/good3n/manawire/issues"
   }
 }
